--- a/K_Bridge/wwwroot/css/Style.css
+++ b/K_Bridge/wwwroot/css/Style.css
@@ -557,3 +557,42 @@ body {
         transform: rotate(180deg);
     }
 
+.custom-radio-group {
+    width: 100%;
+    gap: 10px;
+}
+
+.custom-radio {
+    display: inline-block;
+    position: relative;
+    cursor: pointer;
+}
+
+    .custom-radio input {
+        position: absolute;
+        opacity: 0;
+        cursor: pointer;
+    }
+
+.radio-text {
+    width:100%;
+    display: inline-block;
+    padding: 5px 16px;
+    background-color: #FFE8DA;
+    border: 1px solid #FFFFFF;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+}
+
+.custom-radio input:checked + .radio-text {
+    background-color: #8E6745;
+    color: #FFF0E6;
+}
+.custom-radio input:not(:checked) + .radio-text {
+    background-color: #FFE8DA;
+    color: #8E6745;
+}
+
+.w-20{
+    width: 20%;
+}
