--- a/K_Bridge/Views/Shared/Components/LayoutBoxChat/Default.cshtml
+++ b/K_Bridge/Views/Shared/Components/LayoutBoxChat/Default.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class=" d-flex flex-column mt-4 border-main-color-layout border-2 h-auto w-auto rounded-8" style="max-width: 300px;">
-    <button id="toggle-comments" class="flex-grow-0 border-main-color-header border-bottom p-3 rounded-3 h-50 d-lg-inline-flex justify-content-lg-between">
+    <button id="toggle-comments" class="flex-grow-0 border-bottom p-3 rounded-3 h-50 d-lg-inline-flex justify-content-lg-between">
         <div class="text-uppercase">Bình luận</div>
         <img id="arrow-icon" src="/img/arrow_down.png" alt="arrow_down" />
     </button>
