--- a/K_Bridge/wwwroot/css/Style.css
+++ b/K_Bridge/wwwroot/css/Style.css
@@ -13,7 +13,7 @@
     }
 
 .border-main-color-logo {
-    border-color: #493422;
+    border: 2px solid #493422;
 }
 
 .bg-main-color-header {
@@ -25,7 +25,7 @@
 }
 
 .border-main-color-header {
-    border-color: #8E6745 !important;
+    border: 2px solid #8E6745;
 }
 
 .bg-main-color-layout {
@@ -42,7 +42,7 @@
     }
 
 .border-main-color-layout {
-    border-color: #FFBE98;
+    border: 2px solid #FFBE98;
 }
 
 .bg-main-color-background {
@@ -50,7 +50,7 @@
 }
 
 .bg-main-color-btn {
-    background-color: #FFE8DA;
+    border: 2px solid #FFE8DA;
 }
 
 .text-color-background {
@@ -63,7 +63,7 @@
     }
 
 .border-main-color-background {
-    border-color: #FFF0E6;
+    border: 2px solid #FFF0E6;
 }
 
 .header {
@@ -595,4 +595,19 @@ body {
 
 .w-20{
     width: 20%;
+}
+.poll-result {
+    margin-bottom: 10px;
+}
+
+.poll-option {
+    margin-bottom: 5px;
+}
+
+.poll-bar {
+    background-color: #8E6745;
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+    transition: width 0.5s ease-in-out;
 }
