--- a/K_Bridge/wwwroot/css/Style.css
+++ b/K_Bridge/wwwroot/css/Style.css
@@ -598,7 +598,7 @@ body {
 }
 .poll-result {
     margin-bottom: 10px;
-    background-color: #FFE8DA;
+    background-color: #FFF0E6;
     border-radius: 5px;
     overflow: hidden;
 }
@@ -610,22 +610,23 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    transition: width 0.5s ease-in-out;
-    min-width: 30%; /* Đảm bảo luôn có ít nhất 30% chiều rộng */
+    transition: width 1s ease-in-out;
+    width: 30%; /* Set initial width */
+    min-width: 30%;
 }
 
 .poll-option, .poll-percentage {
-    z-index: 1; /* Đảm bảo text luôn hiển thị trên nền */
-    white-space: nowrap; /* Ngăn text xuống dòng */
-    overflow: hidden; /* Ẩn text nếu quá dài */
-    text-overflow: ellipsis; /* Hiển thị dấu ... nếu text bị cắt */
+    z-index: 1;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .poll-option {
     margin-right: 10px;
-    flex-grow: 1; /* Cho phép tên lựa chọn mở rộng để lấp đầy không gian */
+    flex-grow: 1;
 }
 
 .poll-percentage {
-    flex-shrink: 0; /* Ngăn phần trăm bị co lại */
+    flex-shrink: 0;
 }
