--- a/K_Bridge/Views/Shared/Components/LayoutBoxChat/Default.cshtml
+++ b/K_Bridge/Views/Shared/Components/LayoutBoxChat/Default.cshtml
@@ -10,7 +10,7 @@
             {
                 <ul class="mb-2 d-md-flex p-0">
                     <li class="d-md-flex">
-                        <img src="/img/avatar.png" alt="avatar" class="me-2 rounded-circle" style="width: 20px; height: 20px;" />
+                        <img src="/img/avatar_default.png" alt="avatar" class="me-2 rounded-circle" style="width: 20px; height: 20px;" />
                         <div class="fs-12 text-color-logo mb-1 fw-bold me-2">@chat.Username</div>
                         <div class=" fs-12  text-color-logo  text-break">@chat.Content</div>
                     </li>
