--- a/K_Bridge/wwwroot/css/Style.css
+++ b/K_Bridge/wwwroot/css/Style.css
@@ -630,3 +630,38 @@ body {
 .poll-percentage {
     flex-shrink: 0;
 }
+
+
+#notificationList {
+    position: absolute;
+    right: 20px;
+    top: 100%;
+    z-index: 1000;
+    background-color: white;
+    border: 1px solid #ddd;
+    border-radius: 0.25rem;
+    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+}
+
+.notification-item {
+    padding: 10px;
+    border-bottom: 1px solid #eee;
+}
+
+    .notification-item:hover {
+        background-color: #f8f9fa;
+    }
+
+.notification-content {
+    font-size: 0.9rem;
+    line-height: 1.2;
+}
+
+.notification-message {
+    margin-bottom: 4px;
+}
+
+.notification-time {
+    font-size: 0.75rem;
+    color: #6c757d;
+}
