--- a/K_Bridge/Views/Post/_RepliesPartial.cshtml
+++ b/K_Bridge/Views/Post/_RepliesPartial.cshtml
@@ -22,12 +22,33 @@
 
         </div>
         <div class="col-lg-11">
+            <div class="d-flex justify-content-end">
+                <button class="p-2 btn-point rounded-2" onclick="showDeleteCommentModal()"><img src="~/img/icon_trash_50.png" height="20" width="20" alt="thr point" /> </button>
+                <div class="modal fade" id="deleteCommentModal" tabindex="-1" aria-labelledby="deleteCommentModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header bg-main-color-layout pb-2">
+                                <h5 class="modal-title text-color-header" id="deleteCommentModalLabel">Xóa bình luận</h5>
+                                <button type="button" class="btn-close text-color-header" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body bg-main-color-layout">
+                                <p class="text-center">Bạn có chắc chắn muốn xóa bình luận này?</p>
+                                <div class="mt-2 d-flex justify-content-evenly">
+                                    <button type="button" class="btn btn-account-log w-25" data-bs-dismiss="modal">Hủy</button>
+                                    <button type="button" class="btn btn-account-edit w-25" onclick="deleteComment()">Xóa</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
             <div class="reply-content">
                 @Html.Raw(reply.Reply.Content)
             </div>
         </div>
         <div class="d-flex justify-content-end mb-2">
-            <img src="~/img/user.jpg" class="rounded-circle" alt="Avatar" width="30" height="30">
+            <img src="~/img/avatar_default.png" class="rounded-circle" alt="Avatar" width="30" height="30">
             <div class="newest-card-username mx-2">@reply.Reply.User.Username trả lời @GetTimeAgoHelper.GetTimeAgo(reply.Reply.CreatedAt)</div>
         </div>
     </div>
@@ -147,3 +168,15 @@
             })
             .catch(error => console.error('Error:', error));
     }</script>
+
+
+    <script>
+          function showDeleteCommentModal() {
+    $('#deleteCommentModal').modal('show');
+  }
+
+  function deleteComment() {
+    // Thực hiện xóa bình luận ở đây
+    $('#deleteCommentModal').modal('hide');
+  }
+    </script>
